# libexpat

./: .ci.sh  .gitattributes  .gitignore  .mailmap  .travis.sh  .travis.yml  Brewfile  CMakeLists.txt  CONTRIBUTING.md  COPYING  James Clark (programmer)  README  SECURITY.md  appveyor.yml  compile_commands.json  default.nix  pull_request_template.md
.github/: dependabot.yml
ci_expat_config_h/: expat_config_h_cmake__expected.txt  expat_config_h_in__expected.txt
expat/: .clang-format  .gitignore  CMake.README  CMakeLists.txt  Changes  Changes.json  ConfigureChecks.cmake  MANIFEST  MPL-1_1.html  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  acconfig.h  acinclude.m4  aclocal.m4  apply-clang-format.sh  apply-clang-tidy.sh  buildconf.sh  clean_coverage.sh  config.hin  configure-ac-style.md  configure.ac  configure.in  coverage.sh  distribute.sh  expat.dsw  expat.html  expat.mak  expat.pc.cmake  expat.pc.in  expat.pj  expat.sln  expat.spec  expat.version  expat_config.h.cmake  expatfaq.html  files.txt  (+10 more)
expat/amiga/: Makefile  README.txt  expat_68k.c  expat_68k.h  expat_68k_handler_stubs.c  expat_lib.c  launch.c  stdlib.c
expat/amiga/include/libraries/: expat.h
expat/amiga/include/proto/: expat.h
expat/bcb5/: ExpatGroup.bpg  README.txt  all_projects.bpg  elements.bpf  elements.bpr  elements.mak  expat.bpf  expat.bpr  expat.mak  expat_static.bpr  expat_static.mak  expatw.bpf  expatw.bpr  expatw.mak  expatw_static.bpr  expatw_static.mak  gennmtab.bpf  gennmtab.bpr  gennmtab.mak  libexpat.bpr  libexpat.mak  libexpat_mtd.def  libexpatw.bpf  libexpatw.bpr  libexpatw.mak  libexpatw_mtd.def  makefile.mak  outline.bpf  outline.bpr  outline.mak  setup.bat  xmlwf.bpf  xmlwf.bpr  xmlwf.mak
expat/cmake/: .gitignore  expat-config.cmake.in
expat/cmake/autotools/: .gitignore  expat-config-version.cmake.in  expat-noconfig__haiku.cmake.in  expat-noconfig__windows.cmake.in  expat.cmake  expat.cmake-json.json
expat/conftools/: .gitignore  ac_c_bigendian_cross.m4  ax-check-compile-flag.m4  expat.m4  expatcfg-compiler-supports-visibility.m4  expatcfg-enable-unicode-support.m4  expatcfg-support-arc4random-through-libbsd.m4  expatcfg-support-getrandom.m4  get-version.sh  ltmain.sh
expat/contrib/: install_ndk.sh  setenv_android.sh
expat/demo/: makedemo.bat
expat/doc/: .gitignore  Doxyfile  DoxygenLayout.xml  DoxygenMainpage.txt  Makefile  Makefile.am  ok.min.css  reference.html  style.css  xmlwf.1  xmlwf.sgml  xmlwf.xml
expat/examples/: .gitignore  Makefile.am  Makefile.in  element_declarations.c  elements.c  elements.dsp  elements.vcxproj  outline.c  outline.dsp  outline.vcxproj
expat/fuzz/: .gitignore  expat_fuzzing_corpus_lpm_fuzzer_1b7f3def08091cd6462aa263a06140530a2455dd.tar.xz  expat_fuzzing_corpus_lpm_fuzzer_65ad779f910488fce7a0fb17512c5f64228c5c2b.tar.xz  expat_fuzzing_corpus_lpm_fuzzer_aad8d059fd4a8e763e543c327188e9ca9b547c39.tar.xz  expat_fuzzing_corpus_lpm_fuzzer_de51c8cac856d3224da203c78cca82ce995972fd.tar.xz  expat_fuzzing_corpus_lpm_fuzzer_ed692f129ed1cf22515481acc598a32b98e79ad9.tar.xz  expat_fuzzing_corpus_parse_fuzzer_65ad779f910488fce7a0fb17512c5f64228c5c2b.tar.xz  expat_fuzzing_corpus_parse_fuzzer_a843930e2a57f08338ffe68594989f1928158009.tar.xz  expat_fuzzing_corpus_parse_fuzzer_aad8d059fd4a8e763e543c327188e9ca9b547c39.tar.xz  expat_fuzzing_corpus_parse_fuzzer_de51c8cac856d3224da203c78cca82ce995972fd.tar.xz  expat_fuzzing_corpus_parse_fuzzer_e228e68d73e90640ca91d45583b487a84b4dc027.tar.xz  xml_lpm_fuzzer.cpp  xml_lpm_fuzzer.proto  xml_parse_fuzzer.c  xml_parse_fuzzer.cpp  xml_parsebuffer_fuzzer.c  xml_parsebuffer_fuzzer.cpp
expat/gennmtab/: Makefile.am  gennmtab.c
expat/lib/: .gitignore  Makefile.am  Makefile.in  amigaconfig.h  expat.dsp  expat.dsw  expat.h  expat.h.in  expat.vcxproj  expat.vcxproj.filters  expat_external.h  expat_static.dsp  expat_static.vcxproj  expat_static.vcxproj.filters  expatw.dsp  expatw.vcxproj  expatw.vcxproj.filters  expatw_static.dsp  expatw_static.vcxproj  expatw_static.vcxproj.filters  fallthrough.h  internal.h  libexpat.def  libexpat.def.cmake  libexpat.map  libexpat.map.in  libexpatborl.def  libexpatw.def  libexpatwborl.def  loadlibrary.c  mkfile  nametab.h  random_arc4random.c  random_arc4random_buf.c  random_dev_urandom.c  random_dev_urandom.h  random_getentropy.c  random_getentropy.h  random_getrandom.c  random_getrandom.h  (+15 more)
expat/m4/: .gitignore
expat/sample/: .gitignore  Makefile.in  build.bat  elements.c
expat/tests/: .gitignore  Makefile.am  Makefile.in  README.txt  acc_tests.c  acc_tests.h  acc_tests_cxx.cpp  alloc_tests.c  alloc_tests.h  alloc_tests_cxx.cpp  basic_tests.c  basic_tests.h  basic_tests_cxx.cpp  chardata.c  chardata.h  chardata_cxx.cpp  common.c  common.h  common_cxx.cpp  dummy.c  dummy.h  dummy_cxx.cpp  handlers.c  handlers.h  handlers_cxx.cpp  memcheck.c  memcheck_cxx.cpp  minicheck.c  minicheck.h  minicheck_cxx.cpp  misc_tests.c  misc_tests.h  misc_tests_cxx.cpp  mkfile  ns_tests.c  ns_tests.h  ns_tests_cxx.cpp  nsalloc_tests.c  nsalloc_tests.h  nsalloc_tests_cxx.cpp  (+9 more)
expat/tests/benchmark/: Makefile.am  README.txt  benchmark.c  benchmark.vcxproj
expat/tests/fuzz/: Makefile.am  README.md  fuzzitid.txt  parse_fuzzer.cc
expat/vms/: descrip.mms
expat/win32/: .gitignore  MANIFEST.txt  README.txt  build_expat_iss.bat  expat.dsw  expat.iss
expat/win64/: .gitignore  README.txt
expat/xmlec/: xmlec.c
expat/xmlparse/: .gitignore  hashtable.c  hashtable.h  xmlparse.c  xmlparse.cpp  xmlparse.dsp  xmlparse.h  xmlparse.hpp
expat/xmltok/: .gitignore  ascii.h  asciitab.h  dllmain.c  iasciitab.h  latin1tab.h  nametab.h  utf8tab.h  wxmltok.c  xmldef.h  xmlrole.c  xmlrole.h  xmltok.c  xmltok.dsp  xmltok.h  xmltok_impl.c  xmltok_impl.h  xmltok_ns.c
expat/xmlwf/: .gitignore  Makefile.am  Makefile.in  codepage.c  codepage.h  ct.c  filemap.h  readfilemap.c  unixfilemap.c  wfcheck.c  wfcheck.h  wfcheckmessage.c  win32filemap.c  xmlfile.c  xmlfile.h  xmlmime.c  xmlmime.h  xmltchar.h  xmlurl.h  xmlwf.c  xmlwf.dsp  xmlwf.vcxproj  xmlwf_helpgen.py  xmlwf_helpgen.sh  xmlwin32url.cxx
htdocs/: Makefile  (+3 more)
(+42 files in other folders)
